Add HomePageSettings model

--- a/ToDoApi/appsettings.json
+++ b/ToDoApi/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "GownDb": "Host=massey-gowns-sql.postgres.database.azure.com;Port=5432;Database=gowns;Username=massey_admin;Password=GownPa55word;Ssl Mode=Require;Trust Server Certificate=true"
+    "GownDb": "Host=massey-gowns-sql.postgres.database.azure.com;Port=5432;Database=gowns;Username=massey_admin;Password=GownPa55word;Ssl Mode=Require;Trust Server Certificate=true",
+    "AzureBlobStorage": "YOUR_BLOB_CONNECTION_STRING" //Joe 18/11/2025
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +9,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Paystation": {
+    "ClientId": "617970",
+    "ClientSecret": "LPj72Ri5Vnw5GfvbqesdeuHCOPLL97Nt",
+    "PaystationId": "617970",
+    "GatewayId": "DEVELOPMENT",
+    "BaseUrl": "https://api.paystation.co.nz",
+    "ReturnUrl": "https://example.com/return", // frondend result page
+    "ResponseUrl": "https://gownapi-dsbyfdeydah3aadr.newzealandnorth-01.azurewebsites.net/notify",
+    "TestMode": true
+  },
+  "BlobStorage": {
+    "ConnectionString": "DefaultEndpointsProtocol=https;AccountName=masseygownsblob;AccountKey=YOUR_KEY;EndpointSuffix=core.windows.net",
+    "HeroContainer": "homepage-hero"
+
+  }//Joe 18/11/2025
 }
