Configure Azure Blob Storage and add /test-blob endpoint

--- a/ToDoApi/appsettings.json
+++ b/ToDoApi/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "GownDb": "Host=massey-gowns-sql.postgres.database.azure.com;Port=5432;Database=gowns;Username=massey_admin;Password=GownPa55word;Ssl Mode=Require;Trust Server Certificate=true",
-    "AzureBlobStorage": "YOUR_BLOB_CONNECTION_STRING" //Joe 18/11/2025
+    "GownDb": "Host=massey-gowns-sql.postgres.database.azure.com;Port=5432;Database=gowns;Username=massey_admin;Password=GownPa55word;Ssl Mode=Require;Trust Server Certificate=true"
   },
   "Logging": {
     "LogLevel": {
@@ -21,8 +20,6 @@
     "TestMode": true
   },
   "BlobStorage": {
-    "ConnectionString": "DefaultEndpointsProtocol=https;AccountName=masseygownsblob;AccountKey=YOUR_KEY;EndpointSuffix=core.windows.net",
-    "HeroContainer": "homepage-hero"
-
+    "HeroContainer": "site-assets"
   }//Joe 18/11/2025
 }
