Clear GownDb connection string
Clear the GownDb connection string in appsettings.json

--- a/ToDoApi/appsettings.json
+++ b/ToDoApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "GownDb": ""
-    #"GownDb": "Host=massey-gowns-sql.postgres.database.azure.com;Port=5432;Database=gowns;Username=massey_admin;Password=GownPa55word;Ssl Mode=Require;Trust Server Certificate=true"
+    //"GownDb": "Host=massey-gowns-sql.postgres.database.azure.com;Port=5432;Database=gowns;Username=massey_admin;Password=GownPa55word;Ssl Mode=Require;Trust Server Certificate=true"
   },
   "Logging": {
     "LogLevel": {
