--- a/ToDoApi/appsettings.json
+++ b/ToDoApi/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "GownDb": ""
   },
+  "Email": {
+    "Email": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
