API creation for payment completion

--- a/ToDoApi/appsettings.json
+++ b/ToDoApi/appsettings.json
@@ -24,5 +24,12 @@
   },
   "BlobStorage": {
     "HeroContainer": "site-assets"
+  },
+
+  "Smtp": {
+    "Host": "sandbox.smtp.mailtrap.io",
+    "Port": 587,
+    "Username": "19963bc3a676ba",
+    "Password": "5a81f70c91becf"
   }
 }
