Added Admin API for Ceremonies

--- a/ToDoApi/appsettings.json
+++ b/ToDoApi/appsettings.json
@@ -3,7 +3,13 @@
     "GownDb": "Host=massey-gowns-sql.postgres.database.azure.com;Port=5432;Database=gowns;Username=massey_admin;Password=GownPa55word;Ssl Mode=Require;Trust Server Certificate=true"
   },
   "Email": {
-    "Email": ""
+    "SmtpHost": "smtp.office365.com",
+    "SmtpPort": 587,
+    "EnableSsl": true,
+    "UserName": "info@masseygowns.org.nz",
+    "Password": "knwxqlzlrjxbbxgd",
+    "From": "info@masseygowns.org.nz",
+    "To": "info@masseygowns.org.nz"
   },
   "Logging": {
     "LogLevel": {
