--- a/ToDoApi/GownApi.csproj
+++ b/ToDoApi/GownApi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.26.0" />
     <PackageReference Include="ClosedXML" Version="0.105.0" />
     <PackageReference Include="EFCore.NamingConventions" Version="9.0.0" />
