Added Short Name to Hoods endpoint

--- a/ToDoApi/appsettings.json
+++ b/ToDoApi/appsettings.json
@@ -31,11 +31,41 @@
   "BlobStorage": {
     "HeroContainer": "site-assets"
   },
-
   "Smtp": {
     "Host": "sandbox.smtp.mailtrap.io",
     "Port": 587,
     "Username": "55c47a32c157a3",
     "Password": "ac7d621231ee25"
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ],
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 14
+        }
+      }
+    ]
   }
 }
